[package]
name = "rraft-py"
version = "0.1.0"
authors = ["Lablup Inc."]
license = "Apache-2.0"
repository = "https://github.com/lablup/rraft-py"
readme = "./README.md"
homepage = "https://github.com/lablup/rraft-py"
description = """
Unofficial Python Binding of the tikv/raft-rs
"""
keywords = ["raft", "distributed-systems", "consensus-algorithm", "replication", "distributed-database"]
categories = ["distributed-systems", "database-implementations"]
edition = "2021"

[dependencies]
prost = "0.11"
protobuf = "2"
pyo3 = { version = "0.19.1", features = ["extension-module", "multiple-pymethods"] }
raft = { version = "0.7.0", features = ["prost-codec", "default-logger"], default-features = false }
slog = { version = "2.2", features = ["max_level_debug", "release_max_level_debug"] }
slog-envlogger = "2.1.0"
slog-term = "2.9.0"
slog-stdlog = "4"
slog-async = "2.7.0"
fxhash = "0.2.1"
bincode = "1.3.3"
bindings = { path = "src/bindings" }
raftpb-bindings = { path = "src/raftpb_bindings" }
external-bindings = { path = "src/external_bindings" }
mem-storage-bindings = { path = "src/mem_storage_bindings" }
py-storage-bindings = { path = "src/py_storage_bindings" }
utils = { path = "src/utils" }

[workspace]
members = [
	"src/bindings",
	"src/raftpb_bindings",
	"src/external_bindings",
	"src/mem_storage_bindings",
	"src/py_storage_bindings",
	"src/utils",
]

[lib]
name = "rraft"
crate-type = ["cdylib"]
