[package]
name = "rraft-py"
version = "0.2.13"
authors = ["Lablup Inc."]
license = "Apache-2.0"
repository = "https://github.com/lablup/rraft-py"
readme = "./README.md"
homepage = "https://github.com/lablup/rraft-py"
description = """
Unofficial Python Binding of the tikv/raft-rs
"""
keywords = ["raft", "distributed-systems", "consensus-algorithm", "replication", "distributed-database"]
categories = ["distributed-systems", "database-implementations"]
edition = "2021"

[dependencies]
prost = "0.11"
protobuf = "2"
pyo3 = { version = "0.19.2", features = ["extension-module", "multiple-pymethods"] }
raft = { git = "https://github.com/jopemachine/raft-rs.git", branch = "feat/add-custom-deserializer", features = ["prost-codec", "default-logger"], default-features = false }
slog = { version = "2.2", features = ["max_level_debug", "release_max_level_debug"] }
slog-envlogger = "2.1.0"
slog-term = "2.9.0"
slog-stdlog = "4"
slog-async = "2.7.0"
fxhash = "0.2.1"
bincode = "1.3.3"
bytes = "1.0"
once_cell = "1.7"

[lib]
name = "rraft"
crate-type = ["cdylib"]
