[package]
name = "rraft-py"
version = "0.2.25"
authors = ["Lablup Inc."]
license = "Apache-2.0"
repository = "https://github.com/lablup/rraft-py"
readme = "./README.md"
homepage = "https://github.com/lablup/rraft-py"
description = """
Unofficial Python Binding of the tikv/raft-rs
"""
keywords = ["raft", "distributed-systems", "consensus-algorithm", "replication", "distributed-database"]
categories = ["distributed-systems", "database-implementations"]
edition = "2021"

[dependencies]
prost = "0.11"
protobuf = "2"
pyo3 = { version = "0.20.0", features = ["extension-module", "multiple-pymethods"] }
raft = { git = "https://github.com/jopemachine/raft-rs.git", features = ["prost-codec", "default-logger"], default-features = false }
slog = { version = "2.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-envlogger = "2.1.0"
slog-term = "2.9.0"
slog-stdlog = "4"
slog-async = "2.7.0"
sloggers = "2.1.2"
fxhash = "0.2.1"
bincode = "1.3.3"
bytes = "1.0"
once_cell = "1.7"

[lib]
name = "rraft"
crate-type = ["cdylib"]
