[package]
name = "bindings"
version = "0.1.0"
authors = ["Lablup Inc."]
edition = "2021"

[dependencies]
prost = { version = "0.11", optional = true }
protobuf = "2"
pyo3 = { version = "0.18.3", features = ["extension-module", "multiple-pymethods"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
raft = { version = "0.7.0", features = ["prost-codec", "default-logger"], default-features = false }
tokio = "1.4"
fxhash = "0.2.1"
utils = { path = "../utils" }
raftpb-bindings = { path = "../raftpb_bindings" }
external-bindings = { path = "../external_bindings" }

[lib]
name = "bindings"
path = "lib.rs"