[package]
name = "bindings"
version = "0.1.0"
authors = ["Lablup Inc."]
edition = "2021"

[dependencies]
prost = { version = "0.11", optional = true }
protobuf = "2"
pyo3 = { version = "0.19.1", features = ["extension-module", "multiple-pymethods"] }
raft = { version = "0.7.0", features = ["prost-codec", "default-logger"], default-features = false }
fxhash = "0.2.1"
utils = { path = "../utils" }
raftpb-bindings = { path = "../raftpb_bindings" }
external-bindings = { path = "../external_bindings" }

[lib]
name = "bindings"
path = "lib.rs"