[package]
name = "mem-storage"
version = "0.1.0"
authors = ["jopemachine"]
edition = "2018"

[dependencies]
pyo3 = { version = "0.18.2", features = ["extension-module"] }
raft = { version = "0.6.0", features = ["prost-codec", "default-logger"], default-features = false }
utils = { path = "../utils" }
prost-bindings = { path = "../prost_bindings" }
bindings = { path = "../bindings" }
external-bindings = { path = "../external_bindings" }

[lib]
name = "mem_storage"
path = "lib.rs"