[package]
name = "mem-storage-bindings"
version = "0.1.0"
authors = ["Lablup Inc."]
edition = "2021"

[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module", "multiple-pymethods"] }
raft = { version = "0.7.0", features = ["prost-codec", "default-logger"], default-features = false }
utils = { path = "../utils" }
raftpb-bindings = { path = "../raftpb_bindings" }
bindings = { path = "../bindings" }
external-bindings = { path = "../external_bindings" }

[lib]
name = "mem_storage_bindings"
path = "lib.rs"