[package]
name = "prost-bindings"
version = "0.1.0"
authors = ["jopemachine"]
edition = "2018"

[dependencies]
prost = "0.11"
protobuf = "2"
pyo3 = { version = "0.18.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
raft = { version = "0.6.0", features = ["prost-codec", "default-logger"], default-features = false }
tokio = "1.4"
utils = { path = "../utils" }

[lib]
name = "prost_bindings"
path = "lib.rs"