[package]
name = "py-storage-bindings"
version = "0.1.0"
authors = ["jopemachine"]
edition = "2021"

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module", "multiple-pymethods"] }
raft = { version = "0.7.0", features = ["prost-codec", "default-logger"], default-features = false }
utils = { path = "../utils" }
bindings = { path = "../bindings" }
raftpb-bindings = { path = "../raftpb_bindings" }
external-bindings = { path = "../external_bindings" }

[lib]
name = "py_storage_bindings"
path = "lib.rs"