[package]
name = "raftpb-bindings"
version = "0.1.0"
authors = ["jopemachine"]
edition = "2021"

[dependencies]
prost = "0.11"
protobuf = "2"
pyo3 = { version = "0.18.3", features = ["extension-module", "multiple-pymethods"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
tokio = "1.4"
bincode = "1.3.3"
raft = { version = "0.7.0", features = ["prost-codec", "default-logger"], default-features = false }
utils = { path = "../utils" }

[lib]
name = "raftpb_bindings"
path = "lib.rs"