[package]
name = "utils"
version = "0.1.0"
authors = ["Lablup Inc."]
edition = "2021"

[dependencies]
raft = { version = "0.7.0", features = ["prost-codec", "default-logger"], default-features = false }
pyo3 = { version = "0.18.3", features = ["extension-module", "multiple-pymethods"] }
bincode = "1.3.3"

[lib]
name = "utils"
path = "lib.rs"